--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <p>Welcome to my portfolio Website!!! I'm a passionate and aspiring software engineer with a strong desire to create innovative solutions and push the boundaries of technology. With a deep love for coding and problem-solving, I am constantly seeking opportunities to learn and grow in this ever-evolving field...</p>
             
             <div class="btn-group">
-                <a href="ShrutiResume.pdf" class="btn   active">Download CV</a>
+                <a href="Shruti__Resume.pdf" class="btn   active">Download Resume</a>
                 <a href="mailto:thadkeshruti593@gmail.com" class="btn">Contact</a>
             </div>
 
