--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-------------------------- Home Page -------------------------->
     <div class="FirstElement" id="home">
         <div class="profile-photo">
-            <img src="photo.jpeg" alt="profile picture">
+            <img src="photo..jpeg" alt="profile picture">
         </div>
         <div class="profile-text">
             <h5>Hi, I'm </h5><br>
